[metadata]
name = smiley
author = Doug Hellmann
author-email = doug.hellmann@gmail.com
summary = Smiley spies on your Python app while it runs
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
keywords =
    debugger
    debug
home-page = https://github.com/dhellmann/smiley
zip_safe = False

[files]
packages =
    smiley

[global]
zip_safe = False
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    smiley = smiley.app:main
smiley =
    run = smiley.run:Run
    monitor = smiley.monitor:Monitor
