[metadata]
name = smiley
author = Doug Hellmann
author-email = doug@doughellmann.com
summary = Python Application Tracer
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
keywords =
    debugger
    debug
home-page = https://smiley.readthedocs.org/
zip_safe = False

[files]
packages =
    smiley

[global]
zip_safe = False
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    smiley = smiley.app:main
smiley.commands =
    export = smiley.commands.export:Export
	import = smiley.commands.export:Import
    list = smiley.commands.list:List
    monitor = smiley.commands.monitor:Monitor
    record = smiley.commands.record:Record
    replay = smiley.commands.replay:Replay
	report = smiley.commands.report:Report
    run = smiley.commands.run:Run
    server = smiley.commands.server:Server
	show = smiley.commands.show:Show
	stats_show = smiley.commands.stats:StatsShow
	stats_export = smiley.commands.stats:StatsExport
    threads = smiley.commands.threads:Threads

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source
